Updated to grpc 1.61.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.25)
 project(echogrpcstream)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_PREFIX_PATH C:/Library/grpc-v1.53.1)
+set(CMAKE_PREFIX_PATH C:/Library/grpc-v1.61.0)
 set(Protobuf_USE_STATIC_LIBS ON)
 
+find_package(utf8_range REQUIRED)
 find_package(Protobuf REQUIRED)
 find_package(gRPC REQUIRED)
 
@@ -25,9 +26,9 @@ add_custom_command(
         ${CMAKE_SOURCE_DIR}/${PROTO_NAME}.proto)
 
 add_executable(echoclient ${PROTO_SRC} client.cpp)
-target_link_libraries(echoclient gRPC::grpc++)
+target_link_libraries(echoclient gRPC::grpc++ absl::log_internal_message absl::log_internal_check_op absl::log_internal_conditions utf8_range::utf8_validity)
 target_include_directories(echoclient PRIVATE ${CMAKE_BINARY_DIR}/autogen)
 
 add_executable(echoserver ${PROTO_SRC} server.cpp)
-target_link_libraries(echoserver gRPC::grpc++)
+target_link_libraries(echoserver gRPC::grpc++ absl::log_internal_message absl::log_internal_check_op absl::log_internal_conditions utf8_range::utf8_validity)
 target_include_directories(echoserver PRIVATE ${CMAKE_BINARY_DIR}/autogen)
